# Tugas-React/backend-tugas-reactjs/app/models/mahasiswa.go
@@ -8,3 +8,7 @@ type Mahasiswa struct {
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
 }
+
+type MahasiswaRequest struct {
+	Nama string `json:"nama" validate:"required"`
+}
