# Tugas-React/backend-tugas-reactjs/app/models/mata_kuliah.go
@@ -8,3 +8,7 @@ type MataKuliah struct {
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
 }
+
+type MataKuliahRequest struct {
+	Nama string `json:"nama" validate:"required"`
+}
